--- a/sass/index.css
+++ b/sass/index.css
@@ -1,3 +1,16 @@
+.back {
+  width: 100%;
+  height: 93vh;
+}
+
+.back .Home-details {
+  margin-top: 13rem;
+}
+
+.back .icon {
+  margin-top: 4.7rem;
+}
+
 .call-btn1 {
   display: block;
   position: fixed;
@@ -11,12 +24,12 @@
   opacity: 0.8;
 }
 
+.call-btn1.hover {
+  opacity: 1;
+}
+
 .fa-comments {
   font-size: 25px;
   color: skyblue;
   border: skyblue;
-}
-
-.Home-details {
-  margin-top: 10rem;
 }
