--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,3 +1,16 @@
+.back {
+    width: 100%;
+    height: 93vh;
+
+
+    .Home-details{
+        margin-top: 13rem;
+    }
+
+    .icon {
+        margin-top: 4.7rem;
+    }
+}
 .call-btn1 {
     display: block;
     position: fixed;
@@ -9,14 +22,14 @@
     cursor: pointer;
     z-index: 10000;
     opacity: 0.8;
+
+    &.hover {
+        opacity: 1;
+    }
 }
 
 .fa-comments {
     font-size: 25px;
     color: skyblue;
     border: skyblue;
-}
-
-.Home-details{
-    margin-top: 10rem;
 }
