--- a/sass/index.css
+++ b/sass/index.css
@@ -12,7 +12,6 @@
 }
 
 .call-btn1 {
-  display: block;
   position: fixed;
   bottom: 50px;
   right: 15px;
@@ -24,8 +23,14 @@
   opacity: 0.8;
 }
 
-.call-btn1.hover {
+.call-btn1.display {
+  display: block;
+}
+
+.call-btn1:hover {
+  width: auto;
   opacity: 1;
+  word-spacing: 2px;
 }
 
 .fa-comments {
