--- a/sass/index.scss
+++ b/sass/index.scss
@@ -12,7 +12,6 @@
     }
 }
 .call-btn1 {
-    display: block;
     position: fixed;
     bottom: 50px;
     right: 15px;
@@ -23,8 +22,14 @@
     z-index: 10000;
     opacity: 0.8;
 
-    &.hover {
+    &.display {
+        display: block;
+    }
+
+    &:hover {
+        width: auto;
         opacity: 1;
+        word-spacing: 2px;
     }
 }
 
